--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ docker_build:
 
 .benchmark_template: &benchmark_template
   tags:
-    - gpu-triton
+    - gpu-a10g
   stage: test
   dependencies:
     - docker_build
