--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,47 @@ exclude = '''
   )/
 )
 '''
+
+[tool.poetry]
+name = "relax"
+version = "0.1.0"
+description = ""
+authors = []
+packages = [
+    { include = "tvm", from = "python" },
+]
+
+[tool.poetry.dependencies]
+python = ">=3.8, <3.11"
+attrs = "==22.2.0"
+numpy = ">=1.21, <1.22.0"
+decorator = "^5.1.1"
+psutil = "^5.9.4"
+scipy = "==1.7.3"
+cloudpickle = "^1.6.0"
+
+#############
+# Backends #
+#############
+jinja2 = { version = "^3.1.2", optional = true }
+
+# MetaSchedule
+xgboost = {version = "==1.4.2", optional = true}
+
+#############
+# Importers #
+#############
+
+# Pytorch (also used by ONNX)
+torch = { version = "==1.13.1", optional = true }
+torchvision = { version = "==0.12.0", optional = true }
+
+# ONNX frontend
+onnx = {version = "==1.13.0", optional = true}
+onnxoptimizer = { version = "==0.3.10", optional = true }
+onnxruntime = { version = "==1.14.1", optional = true }
+
+[tool.poetry.extras]
+xgboost = ["xgboost"]
+importer-onnx = ["future", "onnx", "onnxoptimizer", "onnxruntime", "torch", "torchvision"]
+backend-cutlass = ["jinja2"]
